# src/presentation/routes.ts
@@ -9,6 +9,7 @@ import { Productroutes } from "./products/routes";
 import { UserRoutes } from "./users/routes";
 import { SucursalRoutes } from "./sucursales/routes";
 import { ClienteInvoiceRoutes } from "./clientInvoice/routes";
+import { ClientRoutes } from "./clients/routes";
 import { PersonRoutes } from "./person/routes";
 
 
@@ -31,6 +32,7 @@ export class AppRoutes {
     //TODO falta agregar el username en la ruta y el usuario creado y tambien el email en la creación, validar tambien catidad maxima para esa orgnaizaicon de usuarios
     router.use("/api/v1/user", UserRoutes.routes);
     router.use("/api/v1/sucursal", SucursalRoutes.routes);
+    router.use("/api/v1/client", ClientRoutes.routes);
     router.use("/api/v1/clientinvoice", ClienteInvoiceRoutes.routes);
     router.use("/api/v1/person", PersonRoutes.routes);
     //TODO: revisra el "aftercreate" (put)
